syntax = "proto3";

package example.complex;

option go_package = "github.com/shreeyashnaik/proto-go/proto";

message Dummy {
    int32 id = 1;
    string name = 2;
}

message Complex {
    Dummy single_dummy = 1;
    repeated Dummy multiple_dummies = 2;
}
