syntax = "proto3";

package example.enumerations;

option go_package = "github.com/shreeyashnaik/proto-go/proto";

/*
ENUMs tag start with 0
*/
enum EyeColor {
    EYE_COLOR_UNSPECIFIED = 0;
    EYE_COLOR_BLACK = 1;
    EYE_COLOR_BLUE = 2;
    EYE_COLOR_BROWN = 3;
}

/*
FIELDs tag start with 1
*/
message Enumeration {
    EyeColor eye_color = 1;
}